# otus_hw_07

./: CMakeLists.txt  README.md
include/: writer.h
src/: main.cpp
tests/: test_writer.cpp
